--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-rand = "0.9"
+fastrand = "2"
 rayon = "1.11.0"
 
 [workspace.lints.rust]
